--- a/css/style.css
+++ b/css/style.css
@@ -633,6 +633,281 @@ nav {
   .stat-result .stat-decrease::before {
     background-image: url("../imgs/down-arrow.svg"); }
 
+/* Fruit of the Month Club */
+.shard {
+  display: grid;
+  grid-template-columns: minmax(10%, auto) minmax(auto, 990px) minmax(auto, 990px) minmax(10%, auto);
+  grid-gap: auto;
+  grid-template-areas: "hero hero hero hero" "... summary summary ..." "info info info info" "... statement statement ..." "process process process process" "... breakdown breakdown ..." "solution solution solution solution" "... conclusion conclusion ..."; }
+  .shard h1 {
+    color: #436; }
+  .shard h2, .shard h3 {
+    font-weight: 500; }
+  .shard mark {
+    background-color: #fceeb6; }
+  .shard .PS {
+    margin-top: -0.5em;
+    margin-bottom: 2em;
+    font-size: 14px;
+    margin: 0 auto; }
+
+/* Blocks of mixed content dedicated to a step within a section */
+.shard .step-block img {
+  display: block;
+  width: 100%; }
+
+.shard .step-block .bluetext {
+  font-weight: 600;
+  color: #3B53D9; }
+
+.shard .step-block .flexbox {
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+
+.section-break::after {
+  content: '...';
+  display: block;
+  margin: 1em 0 2em;
+  font-size: 2em;
+  letter-spacing: 8px;
+  text-align: center; }
+
+/* Blocks of Text - Optimize for reading */
+.shard .text-block {
+  display: block;
+  width: 50%;
+  margin: auto; }
+  .shard .text-block h2, .shard .text-block h3, .shard .text-block h4 {
+    margin: 0 0 0.5em; }
+  .shard .text-block h2 + div h3 {
+    margin-top: 0; }
+  .shard .text-block p {
+    line-height: 1.7; }
+  .shard .text-block p, .shard .text-block video {
+    margin-top: 2em; }
+  .shard .text-block img {
+    margin: 3em 0; }
+  .shard .text-block ul li, .shard .text-block ol li {
+    margin-left: 1.5em; }
+
+.shard .banner > div {
+  width: 80%;
+  max-width: 1980px;
+  padding: 3em 0;
+  margin: auto; }
+
+/* Hero */
+.shard .hero {
+  grid-area: hero; }
+  .shard .hero h1 {
+    font-size: 2.25em;
+    margin: auto 0;
+    text-align: left;
+    line-height: 1.3;
+    font-weight: lighter; }
+  .shard .hero img {
+    max-width: 50%;
+    margin-top: -2em; }
+  .shard .hero.banner {
+    padding: 0; }
+    .shard .hero.banner video {
+      width: 100%;
+      display: block; }
+  .shard .hero .hero-content {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    width: 70%;
+    max-width: 1980px;
+    margin: 5em auto; }
+
+/* Summary */
+.shard .summary {
+  grid-area: summary;
+  display: flex;
+  flex-flow: row wrap;
+  margin: 0 auto;
+  padding: 4em 0; }
+  .shard .summary .card {
+    display: inline-block;
+    text-align: left;
+    border-radius: 1em;
+    padding: 2em 2.5em;
+    margin: inherit 2em inherit 0; }
+    .shard .summary .card p {
+      padding: 0;
+      color: #000;
+      font-size: inherit; }
+    .shard .summary .card h1, .shard .summary .card h2, .shard .summary .card h3, .shard .summary .card h4 {
+      font-size: 1.5em;
+      font-weight: 400;
+      margin-bottom: 0.75em; }
+  .shard .summary .quick-summary {
+    position: relative;
+    top: -5em;
+    margin-right: 3em; }
+
+/* Project Info */
+.shard .projectinfo {
+  grid-area: info; }
+  .shard .projectinfo.banner {
+    background-color: #f2f4f8; }
+  .shard .projectinfo .projectinfo-content {
+    display: flex;
+    justify-content: space-evenly; }
+  .shard .projectinfo h3 {
+    margin: 0 0 0.75em; }
+  .shard .projectinfo .skills ul, .shard .projectinfo .skills li {
+    list-style: none; }
+  .shard .projectinfo .tools img {
+    height: 4em;
+    width: auto;
+    margin-right: 1em; }
+
+/* Statment */
+.shard .statement {
+  grid-area: statement;}
+  .shard .statement img, .shard .statement .PS {
+    margin: 0 auto; }
+  .shard .statement .PS {
+    margin-top: -0.5em;
+    margin-bottom: 2em;
+    font-size: 15px; }
+  .shard .statement .solution-nav {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    margin: 2em 0;
+    list-style: none; }
+    .shard .statement .solution-nav .solution-nav-item {
+      box-sizing: border-box;
+      flex-grow: 1;
+      padding: 0.5em 0;
+      margin: 0;
+      border-bottom: 1px solid #e0e0e0;
+      text-align: center; }
+      .shard .statement .solution-nav .solution-nav-item:hover {
+        cursor: pointer; }
+      .shard .statement .solution-nav .solution-nav-item.active {
+        color: #0f62fe;
+        border-bottom: 2px solid #0f62fe; }
+  .shard .statement .solution-iteration-view {
+    width: 100%;
+    height: auto; }
+
+.shard .magnify-wrapper {
+  position: relative; }
+  .shard .magnify-wrapper .magnify-focus {
+    position: absolute;
+    opacity: 0;
+    width: 600px;
+    height: 600px;
+    left: 0;
+    top: 0;
+    background-position: 0 0;
+    background-image: url("../imgs/shard_affinity wall2@2x.png");
+    background-repeat: no-repeat;
+    border-radius: 100%;
+    border: 10px solid #333;
+    box-shadow: 0 0.5em 0.75em rgba(47, 26, 90, 0.45);
+    pointer-events: none; }
+
+/* Process */
+.shard .process {
+  grid-area: process;
+  min-height: 500px; }
+  .shard .process h2 {
+    position: relative;
+    left: -9em;
+    margin-bottom: 2em;
+    color: #fff;
+    text-align: center; }
+  .shard .process.banner {
+    background: #0e0716; }
+  .shard .process .process-diagram {
+    position: relative;
+    width: 50%;
+    margin: auto; }
+    .shard .process .process-diagram img {
+      display: block;
+      width: 100%;
+      min-width: 300px;
+      max-width: 600px;
+      margin: auto; }
+
+/* Breakdown */
+.shard .breakdown {
+  grid-area: breakdown; }
+  .shard .breakdown h3 {
+    display: inline-block; }
+  .shard .breakdown .breakdown-floater {
+    position: fixed;
+    top: 10em;
+    left: 5%;
+    width: 18%;
+    max-width: 250px;
+    height: 50vh;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-image: url("../imgs/design-process-research.svg"); }
+  .shard .breakdown .ideation .breakdown-floater {
+    background-image: url("../imgs/design-process-ideation.svg"); }
+  .shard .breakdown .prototype .breakdown-floater {
+    background-image: url("../imgs/design-process-prototype.svg"); }
+  .shard .breakdown .test .breakdown-floater {
+    background-image: url("../imgs/design-process-test.svg"); }
+
+/* Solution */
+.shard .solution {
+  grid-area: solution; }
+  .shard .solution.banner {
+    background: #0e0716; }
+  .shard .solution h2 {
+    color: #fff;
+    text-align: center; }
+  .shard .solution .solution-content {
+    margin: auto;
+    display: block; }
+    .shard .solution .solution-content img {
+      display: block;
+      margin: auto; }
+
+/* Conclusion */
+.shard .conclusion {
+  grid-area: conclusion; }
+  .shard .conclusion .stat-bar {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    padding: 2em;
+    width: 100%;
+    background-color: #f2f4f8; }
+
+/* ==================================================== */
+/* Stat Result Utility */
+.stat-result {
+  display: inline-block;
+  margin-right: 2em; }
+  .stat-result .label {
+    font-weight: bold; }
+  .stat-result .stat-increase,
+  .stat-result .stat-decrease {
+    padding: 1em 0; }
+    .stat-result .stat-increase::before,
+    .stat-result .stat-decrease::before {
+      content: "";
+      display: inline-block;
+      height: 3em;
+      width: 2em;
+      margin: 0 1em -1em 0;
+      background-size: contain;
+      background-repeat: no-repeat; }
+  .stat-result .stat-increase::before {
+    background-image: url("../imgs/up-arrow.svg"); }
+  .stat-result .stat-decrease::before {
+    background-image: url("../imgs/down-arrow.svg"); }
+
 /* =============== PROJECTS =============== */
 .projectinfo {
   grid-area: info;
