--- a/css/style.css
+++ b/css/style.css
@@ -220,7 +220,7 @@ nav {
     left: 50%;
     opacity: 1; }
   .mix-details h3 {
-    color: #fff;
+    color: #262626;
     font-weight: 500;
     font-size: 24px;;
     letter-spacing: 0.15em;
@@ -229,7 +229,7 @@ nav {
     text-align: left; 
   }
   .mix-details p {
-    color: #fff;
+    color: #262626;
     text-align: left; }
 
 .fadeIn-top {
