--- a/css/style.css
+++ b/css/style.css
@@ -1196,7 +1196,12 @@ input[type=submit] {
     margin-top: 2em; }
   .gif {
     width: 30%;
-    height: 30%; } }
+    height: 30%; }
+  
+  .card_title h2 {
+    text-align: center;
+    margin: auto; }
+  }
 
 @media only screen and (max-width: 1199px) {
   .greeting img {
@@ -1224,6 +1229,10 @@ input[type=submit] {
   .fomc .text-block{
     width: 100%;
   }
+
+  .card_title h2 {
+    text-align: center;
+    margin: auto; }
   
   }
 
